# tos2ca-fortracc-module

./: CITATION.cff  LICENSE.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_check.yaml
chunked_outputs/: fortracc_output.nc4
fortracc_module/: chunking.py  flow.py  fortracc.py  inequalities.py  objects.py  utils.py
python_outputs/: fortracc_output.nc4
python_outputs_deprecated/: fortracc_output.nc4
src/fortracc_module/: deprecation.py  detectors.py  objects.py  utils.py
tutorials/: chunking_tutorial.py  tutorial.py  tutorial_deprecated.py
