[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fortracc_module"
version = "2.1"
description = "TOS2CA ForTraCC Library"
readme = "README.md"
requires-python = "==3.9.23"
license = { text = "Apache 2.0" }
authors = [
  { name = "Brian Knosp", email = "Brian.Knosp@jpl.nasa.gov" }
]

dependencies = [
  "contourpy==1.0.6",
  "cycler==0.11.0",
  "fonttools==4.38.0",
  "imageio==2.22.4",
  "kiwisolver==1.4.4",
  "matplotlib==3.6.2",
  "networkx==2.8.8",
  "numpy==1.24.3",
  "packaging==21.3",
  "pandas==1.5.3",
  "Pillow==9.4.0",
  "pyparsing==3.0.9",
  "python-dateutil==2.8.2",
  "pytz==2022.6",
  "PyWavelets==1.4.1",
  "scikit-image==0.19.3",
  "scipy==1.10.1",
  "six==1.16.0",
  "tifffile==2022.10.10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]